feat: question 4.5, 2, 5 & docs

--- a/question_4/5.md
+++ b/question_4/5.md
@@ -1,2 +1,25 @@
 **Assuming your 2 tables contain a huge amount of data and each join will take about 30 hours,
 while you need to do daily report, what is your solution?**
+
+---
+
+1. Quickly review query execution plan
+   * Spot issues & refactor code if possible
+2. Pre-aggregated marterialied view/table
+   * Run query during non-peak time (e.g. 0-5am) & save the result for daily report refresh in the morning
+   * The report only read from the aggregated data
+3. Apply incremental load & transform
+   * Only process data that:
+     * greater than  `<max run time of processed data>`
+   * How:
+     * SQL procedure to update report data table
+4. Index
+   * Consider apply index on the columns used in join & filter
+   * Candidate
+     * order.date_order
+     * order.client_id
+     * order_delivery.order_id
+     * order_delivery.delivery_date
+5. Partition table:
+   * Purpose: reduce the data size scan
+   * By: order year/moth
